<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/menu_de_inicio_pantalla_principal"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_play"

        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="Comenzar a jugar"
        android:text="@string/jugar"
        app:layout_constraintBottom_toTopOf="@+id/cartasBoton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_instruccions"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/instrucciones"
        android:text="@string/instrucciones"
        app:layout_constraintBottom_toTopOf="@+id/button_salir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_salir"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="86dp"
        android:contentDescription="@string/salir"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cartasBoton"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/strBtnMenuPrincipalCartasDescripcion"
        android:text="@string/strBtnCartas"
        app:layout_constraintBottom_toTopOf="@+id/button_instruccions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="240dp"
        android:layout_height="251dp"
        android:src="@drawable/logoend"
        android:contentDescription="@string/strImgLogoDescripcion"
        app:layout_constraintBottom_toTopOf="@+id/button_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>