<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MenuCartas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/menuCartasActivity"
    tools:context=".MenuCartasFragment">

    <TextView
        android:id="@+id/Agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_span="2"
        android:gravity="center_horizontal"
        android:text="@string/Ins_agregar"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/button_Agregar"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_Agregar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="#ffffff"
        android:contentDescription="@string/agregar"
        android:text="@string/agregar"
        app:layout_constraintBottom_toTopOf="@+id/btnEditarCartas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEditarCartas"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:background="#ffffff"
        android:contentDescription="@string/editarCartasBtn"
        android:text="@string/editarCartasBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>