<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/acerca_de"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="Acerca de contiene informacion de los que hicieron el juego">

    <TextView
        android:id="@+id/tex"
        android:layout_width="127dp"
        android:layout_height="32dp"
        android:text="@string/acerca_de"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/acerca_de_descripcion"
        android:text="@string/acerca_de_descripcion"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex"
        app:layout_constraintVertical_bias="0.146" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Integrantes "
                android:text="Integrantes"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:contentDescription="@string/tutor"
                android:text="@string/tutor" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button4"
                android:layout_weight="3"
                android:layout_margin="5dp"
                android:contentDescription="@string/desarrollador3"
                android:text="@string/desarrollador3" />

            <Button
                android:id="@+id/button2"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:contentDescription="@string/desarrollador2"
                android:text="@string/desarrollador2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desarrollador1"
                android:text="@string/desarrollador1" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>